# measuro

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.rst
.github/workflows/: .ci.yaml
docs/: make.bat
docs/source/: conf.py  developer-guide.txt  getting-started.txt  index.txt
examples/: CMakeLists.txt  boolmetrics.cpp  customrenderer.cpp  helloworld.cpp  json_renderer_example.json  metrichandles.cpp  rate.cpp  renderers.cpp  throttle.cpp
src/: CMakeLists.txt  Measuro.hpp  Measuro.hpp.in  measuro.hpp
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt  benchmark.cpp
test/integration/: CMakeLists.txt
test/system/: CMakeLists.txt  check_output.py  system.cpp
test/unit/: BoolMetric_test.cpp  CMakeLists.txt  JsonRenderer_test.cpp  JsonStringLiteral_test.cpp  Metric_test.cpp  NumberMetric_test.cpp  PlainRenderer_test.cpp  PrometheusRenderer_test.cpp  RateMetric_test.cpp  Registry_test.cpp  StringMetric_test.cpp  SumMetric_test.cpp  Throttle_test.cpp  stubs.hpp  version_test.cpp
